# websocket-rs

./: Cargo.toml
src/: native_client.rs
tests/: bench_socks5_handshake.py  test_native_features.py
websocket_rs/: native_client.pyi
